Implemented GetTopicIdentifiersCommand class.
