# engine/api/swagger.yaml
@@ -8,27 +8,35 @@ produces:
   - application/json
 basePath: /1.0
 paths:
+  '/identifiers':
+    get:
+      operationId: engine.api.service.get_topic_identifiers
+      summary: Get topic identifiers
+      parameters:
+        - name: query
+          description: Query string
+          in: query
+          type: string
+          required: true
+          pattern: "^\\*|[a-zA-Z0-9-]+$"
+        - $ref: '#/parameters/offset'
+        - $ref: '#/parameters/limit'
+      responses:
+        200:
+          description: Return topic identifiers
+        404:
+          description: No topics exist
   '/topics':
     get:
       operationId: engine.api.service.get_topics
-      summary: Get a collection of topics
+      summary: Get topics
       parameters:
-          - $ref: '#/parameters/instance_of'
-          - name: offset
-            description: Positive number
-            in: query
-            type: number
-            required: false
-            pattern: "^[0-9]+$"
-          - name: limit
-            description: Positive number
-            in: query
-            type: number
-            required: false
-            pattern: "^[0-9]+$"
+        - $ref: '#/parameters/instance_of'
+        - $ref: '#/parameters/offset'
+        - $ref: '#/parameters/limit'
       responses:
         200:
-          description: Return collection of topics
+          description: Return topics
         404:
           description: No topics exist
   '/topics/{identifier}':
@@ -102,3 +110,17 @@ parameters:
     type: string
     required: false
     pattern: "^\\*|[a-zA-Z0-9-]+$"
+  offset:
+    name: offset
+    description: Positive number
+    in: query
+    type: number
+    required: false
+    pattern: "^[0-9]+$"
+  limit:
+    name: limit
+    description: Positive number
+    in: query
+    type: number
+    required: false
+    pattern: "^[0-9]+$"
